--- a/index.html
+++ b/index.html
@@ -62,7 +62,17 @@
         </div>
     </section>
 
-    fdf
+
+
+
+    <!-- SECOND SECTION -->
+    <section class="second-section bg-purple text-center text-white">
+        <div class="container px-4">
+            <h1 class="font-primary second-title mt-5"> Pictures Images and drawings </h1>
+            <p class="second-paragraph"> We would like to welcome and invite you to the world&rsquo;s </p>
+        </div>
+
+    </section>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
