Finished with footer.
Tweaks and perfections still need to be made.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="sass/main.css">
 
+    <!-- Icon cdn -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
 
     <title> Endless </title>
 </head>
@@ -68,8 +70,26 @@
     <!-- SECOND SECTION -->
     <section class="second-section bg-purple text-center text-white">
         <div class="container px-4">
-            <h1 class="font-primary second-title mt-5"> Pictures Images and drawings </h1>
+            <h1 class="font-primary second-title"> Pictures Images and drawings </h1>
             <p class="second-paragraph"> We would like to welcome and invite you to the world&rsquo;s </p>
+        </div>
+
+    </section>
+
+
+    <!-- SECOND SECTION -->
+     <section class="second-section bg-gray text-center text-white">
+        <div class="container px-4">
+            <h1 class="font-primary second-title"> Footer and stuff </h1>
+            <p class="second-paragraph"> We would like to welcome and invite you to the world&rsquo;s </p>
+
+            <i class="bi bi-instagram h3 mx-1"></i>
+            <i class="bi bi-facebook h3 mx-1"></i>
+            <i class="bi bi-twitter h3 mx-1"></i>
+            <i class="bi bi-linkedin h3 mx-1 "></i>
+            
+            <hr class="mt-5">
+            <p class="font-secondary mt-5 mb-0 pb-0"> Design by Pliskin <i class="bi bi-balloon-heart"></i> </p>
         </div>
 
     </section>
