Did rough work for 'visual' page.
Not yet finished.

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto font-secondary">
                     <li class="nav-item ">
-                        <a href="#learn" class="nav-link"> Lobby </a>
+                        <a href="#" class="nav-link"> Lobby </a>
                     </li>
 
                     <li class="nav-item">
-                        <a href="#questions" class="nav-link"> Visual </a>
+                        <a href="visual.html" class="nav-link"> Visual </a>
                     </li>
 
                     <li class="nav-item">
@@ -77,8 +77,8 @@
     </section>
 
 
-    <!-- SECOND SECTION -->
-     <section class="second-section bg-gray text-center text-white">
+    <!-- FOOTER SECTION -->
+    <section class="second-section bg-gray text-center text-white">
         <div class="container px-4">
             <h1 class="font-primary second-title"> Footer and stuff </h1>
             <p class="second-paragraph"> We would like to welcome and invite you to the world&rsquo;s </p>
