Finished 'visual' page.

--- a/visual.html
+++ b/visual.html
@@ -62,7 +62,7 @@
 
     <!-- IMAGE SECTION -->
     <section class="mt-lg-5 pt-lg-5">
-        <div class="container text-center px-4">
+        <div class="container text-md-center px-4">
             <img class="piece" src="img/youtopia.svg" alt="">
             <h2 class="font-primary piece-title mt-5"> Youtopia </h2>
             <p class="font-secondary second-paragraph mb-5 pb-3"> We would like to welcome and invite you to the world&rsquo;s </p>
@@ -71,9 +71,22 @@
             <h2 class="font-primary piece-title mt-5"> Osmosis </h2>
             <p class="font-secondary second-paragraph mb-5 pb-5"> We would like to welcome and invite you to the world&rsquo;s </p>
 
+
             <img class="piece" src="img/suitable.svg" alt="">
             <h2 class="font-primary piece-title mt-5"> Tall and pretty </h2>
             <p class="font-secondary second-paragraph mb-5 pb-5"> We would like to welcome and invite you to the world&rsquo;s </p>
+
+            <div class="sub-menu pb-5 mb-5 d-none d-sm-block">
+                <a href="index.html"> <span class="font-secondary mx-2"> <i class="bi bi-house-fill h3 mx-1"></i>  Lobby </span> </a>
+                <a href="visual.html"> <span class="font-secondary mx-2"> <i class="bi bi-image-fill h3 mx-1"></i> Visual </span> </a>
+                <a href=""> <span class="font-secondary mx-2"> <i class="bi bi-book-half h3 mx-1"></i> Reading </span> </a>
+                <a href=""> <span class="font-secondary mx-2"> <i class="bi bi-plus-circle-fill h3 mx-1 "></i> Extra </span> </a>
+                <br>
+            </div>
+
+            <img class="piece" src="img/youtopia.svg" alt="">
+            <h2 class="font-primary piece-title mt-5"> Youtopia </h2>
+            <p class="font-secondary second-paragraph mb-5 pb-3"> We would like to welcome and invite you to the world&rsquo;s </p>
         </div>
     </section>
 
