--- a/reading.html
+++ b/reading.html
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="sass/main.css">
+    <link rel="stylesheet" href="sass/reading.css">
+    <link rel="stylesheet" href="sass/visual.css">
 
     <!-- Icon cdn -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
 
-    <title> Endless </title>
+    <title> Endless - Reading </title>
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg text-black bg-beige py-4">
+    <nav class="navbar navbar-expand-lg text-black bg-white py-4">
         <div class="container logo px-4 justify-content-between">
 
             <a href="#" class="navbar-brand opacity-0 justify-content-center"> <img src="img/logo.svg" alt="" class="img-fluid w-75 px-2"> </a>
@@ -29,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto font-secondary">
                     <li class="nav-item ">
-                        <a href="#" class="nav-link"> Lobby </a>
+                        <a href="index.html" class="nav-link"> Lobby </a>
                     </li>
 
                     <li class="nav-item">
@@ -37,7 +39,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="reading.html" class="nav-link"> Reading </a>
+                        <a href="#" class="nav-link"> Reading </a>
                     </li>
                 </ul>
             </div>
@@ -47,33 +49,26 @@
 
 
     <!-- HERO SECTION -->
-    <section class="hero img-fluid pb-5 bg-beige">
+    <section class="hero img-fluid pb-0 pb-lg-0 bg-white" style="background-image: none;">
         <div class="container pt-1 px-4">
-            <h1 class="font-primary title"> Endless </h1>
-            <h1 class="font-primary title text-purple"> Endless </h1>
-            <h1 class="font-primary title"> Endless </h1>
-
-
-            <p class="about font-secondary mt-3">
-                We would like to welcome and invite you to the world&rsquo;s Origam! World! incorporated assures complete and utter safety in any.
-                We would like to welcome and invite you to the world&rsquo;s Origam! World! incorporated assures complete and utter safety in any.
-            </p>
-
-            <button class="cta btn btn-lg py-3 btn-dark font-secondary mt-3 mb-5"> Read more </button>
+            <h1 class="font-primary title text-purple mb-0 pb-5"> Reading </h1>
+            <img class="img-fluid" src="img/neighborhood.svg" alt="">
+            <br>
+            <button class="cta btn btn-lg py-3 btn-dark font-secondary mt-5 mb-3"> Read more </button>
 
         </div>
     </section>
 
 
+    <!-- ARTICLE SECTION -->
+    <section class="articles mt-lg-5 pt-lg-3 pb-3">
+        <div class="container px-4 ">
+            <a href=""> <h2 class="font-primary article-title mt-5"> Article #1 </h2> </a>
+            <p class="font-secondary article-paragraph mb-5"> We would like to welcome and invite you to the world&rsquo;s </p>
 
-
-    <!-- SECOND SECTION -->
-    <section class="second-section bg-purple text-center text-white">
-        <div class="container px-4">
-            <h1 class="font-primary second-title"> Pictures Images and drawings </h1>
-            <p class="second-paragraph"> We would like to welcome and invite you to the world&rsquo;s </p>
+            <a href=""> <h2 class="font-primary article-title mt-0"> Article #2 </h2> </a>
+            <p class="font-secondary article-paragraph mb-5 pb-3"> We would like to welcome and invite you to the world&rsquo;s </p>
         </div>
-
     </section>
 
 
@@ -86,14 +81,12 @@
             <i class="bi bi-instagram h3 mx-1"></i>
             <i class="bi bi-facebook h3 mx-1"></i>
             <i class="bi bi-twitter h3 mx-1"></i>
-            <i class="bi bi-linkedin h3 mx-1 "></i>
+            <i class="bi bi-linkedin h3 mx-1"></i>
             
             <hr class="mt-5">
             <p class="font-secondary mt-5 mb-0 pb-0"> Design by Pliskin <i class="bi bi-balloon-heart"></i> </p>
         </div>
-
     </section>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
