--- a/visual.html
+++ b/visual.html
@@ -10,7 +10,7 @@
     <!-- Icon cdn -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
 
-    <title> Endless - visual </title>
+    <title> Endless - Visual </title>
 </head>
 <body>
 
@@ -38,7 +38,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="#instructors" class="nav-link"> Writing </a>
+                        <a href="reading.html" class="nav-link"> Reading </a>
                     </li>
                 </ul>
             </div>
