--- a/reading.html
+++ b/reading.html
@@ -52,7 +52,7 @@
     <section class="hero img-fluid pb-0 pb-lg-0 bg-white" style="background-image: none;">
         <div class="container pt-1 px-4">
             <h1 class="font-primary title text-purple mb-0 pb-5"> Reading </h1>
-            <img class="img-fluid" src="img/neighborhood.svg" alt="">
+            <img class="hero-img img-fluid" src="img/neighborhood.svg" alt="">
             <br>
             <button class="cta btn btn-lg py-3 btn-dark font-secondary mt-5 mb-3"> Read more </button>
 
@@ -62,7 +62,7 @@
 
     <!-- ARTICLE SECTION -->
     <section class="articles mt-lg-5 pt-lg-3 pb-3">
-        <div class="container px-4 ">
+        <div class="container">
             <a href=""> <h2 class="font-primary article-title mt-5"> Article #1 </h2> </a>
             <p class="font-secondary article-paragraph mb-5"> We would like to welcome and invite you to the world&rsquo;s </p>
 
