Made and linked article pages.

--- a/article2.html
+++ b/article2.html
@@ -39,7 +39,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="#" class="nav-link"> Reading </a>
+                        <a href="reading.html" class="nav-link"> Reading </a>
                     </li>
                 </ul>
             </div>
@@ -48,26 +48,21 @@
     </nav>
 
 
-    <!-- HERO SECTION -->
-    <section class="hero img-fluid pb-0 pb-lg-0 bg-white" style="background-image: none;">
-        <div class="container pt-1 px-4">
-            <h1 class="font-primary title text-purple mb-0 pb-5"> Reading </h1>
-            <img class="hero-img img-fluid" src="img/neighborhood.svg" alt="">
-            <br>
-            <button class="cta btn btn-lg py-3 btn-dark font-secondary mt-5 mb-3"> Read more </button>
-
-        </div>
-    </section>
-
 
     <!-- ARTICLE SECTION -->
-    <section class="articles mt-lg-5 pt-lg-3 pb-3">
+    <section class="articles mt-5 mt-lg-5 pt-lg-3 pb-3">
         <div class="container">
-            <a href="article1.html"> <h2 class="font-primary article-title mt-5"> Article #1 </h2> </a>
-            <p class="font-secondary article-paragraph mb-5"> We would like to welcome and invite you to the world&rsquo;s </p>
-
-            <a href="article2.html"> <h2 class="font-primary article-title mt-0"> Article #2 </h2> </a>
-            <p class="font-secondary article-paragraph mb-5 pb-3"> We would like to welcome and invite you to the world&rsquo;s </p>
+            <h2 class="font-primary article-title mt-0"> Article #2 </h2>
+            <p class="font-secondary article-paragraph mb-5 pb-3">
+                We would like to welcome and invite you to the world&rsquo;s
+                <br> <br>
+                Origami was initially used only for religious purposes due to the high cost of paper. When new production techniques made paper cheaper and more available, origami became popular as a form of entertainment and traditional paper figures such as the crane were developed
+                <br> <br>
+                during this period, the first two origami books were published.
+                Origami was initially used only for religious purposes due to the high cost of paper. When new production techniques made paper cheaper and more available, origami became popular as a form of entertainment and traditional paper figures such as the crane were developed
+                <br> <br>
+                during this period, the first two origami books were published.     
+            </p>
         </div>
     </section>
 
