--- a/visual.html
+++ b/visual.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="sass/main.css">
     <link rel="stylesheet" href="sass/visual.css">
     <link href="lightbox/lightbox.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/jpg" href="img/favicon1.svg"/>
 
     <!-- Icon cdn -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
