--- a/article2.html
+++ b/article2.html
@@ -80,7 +80,7 @@
             <i class="bi bi-linkedin h3 mx-1"></i>
             
             <hr class="mt-5">
-            <p class="font-secondary mt-5 mb-0 pb-0"> Design by Pliskin <i class="bi bi-balloon-heart"></i> </p>
+            <p class="font-secondary mt-5 mb-0 pb-0"> Designed by Ariel Carvalho <i class="bi bi-balloon-heart"></i> </p>
         </div>
     </section>
 
